[package]
name = "confertus"
authors = ["Felix Karg <f.karg10@gmail.com>"]
repository = "https://github.com/fkarg/confertus"
readme = "README.md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.release]
lto = true

[dependencies]
either = "1.7.0"

[dev-dependencies]
pretty_assertions = "1.2.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
test-case = "2.1.0"
rand = "0.8.5"
